<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">行记</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="zb_content">记笔帐吧...</string>
    <string name="zb_type">类型：</string>
    <string name="zb_typetext">请点此选择类型</string>
    <string name="addflag">请填写新的标签</string>
    <string name="actionbar_return_addrecord">返回</string>
    <string name="actionbar_ensurebtn_addrecord">确定</string>
    <string name="content_addrecord">记点什么吧...</string>
    <string name="weizhitext">所在位置</string>
    <string name="radio1">首页</string>
    <string name="radio2">行记</string>
    <string name="radio3">账本</string>
    <string name="radio4">我</string>
    <string name="changelocate">您当前的位置</string>
    <string name="changename">请输入你要修改的昵称</string>
    <string name="conf_1">清空所有记录</string>
    <string name="conf_2">清空账本</string>
    <string name="conf_3">检查更新</string>
    <string name="load_layout">正在加载...</string>
    <string name="talincome">当前总收入：</string>
    <string name="taloutcome">当前总支出：</string>
    <string name="uidt">账号</string>
    <string name="uidh">手机号/账号</string>
    <string name="serachh">搜索</string>
    <string name="id_dir_name">所有图片</string>
    <string name="user_jilu">记录</string>
    <string name="user_jizhang">记账</string>
    <string name="user_xiangce">相册</string>
    <string name="user_shezhi">设置</string>
    <string name="user_tuichu">退出登录</string>
    <string name="userimgt">头像</string>
    <string name="usernamet">用户名</string>
    <string name="registpwdt">更改密码</string>
    <string name="registert">修改</string>
    <string name="xingji_del">删除</string>
    <string name="sharebtn">转发</string>
    <string name="xingji_settime">今天</string>
    <string name="xingji_setflag">自定义标签</string>
    <string name="xingji_flag">标签</string>

</resources>
