<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/conf_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/conf_1"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:src="@drawable/right" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="#F2F2F2" />

        <LinearLayout
            android:id="@+id/conf_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/conf_2"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:src="@drawable/right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/conf_3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/conf_3"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>