<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/info_1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="15dip"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/userimgt"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/info_img"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pic1" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="#F2F2F2" />

        <LinearLayout
            android:id="@+id/info_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/usernamet"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:textColor="#A1A1A1"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:src="@drawable/right" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="#F2F2F2" />

        <LinearLayout
            android:id="@+id/info_3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/uidt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/info_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:textColor="#A1A1A1"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:src="@drawable/right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/info_4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/info_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/registpwdt"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>