<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/user_info"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="5dip"
            android:layout_marginEnd="3dip"
            android:layout_marginTop="15dip"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:paddingEnd="5dip"
            android:paddingStart="5dp" >

            <ImageView
                android:id="@+id/user_img"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dip"
                    android:onClick="doClick"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dip"
                    android:textColor="#A1A1A1"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_jilu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="0.8dip"
            android:layout_marginTop="20dip"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:paddingEnd="5dp"
            android:paddingStart="5dp" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:background="#00000000"
                android:src="@drawable/v_jl" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/user_jilu"
                android:textColor="#434343"
                android:textSize="20sp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:src="@drawable/right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_jizhang"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="0.8dip"
            android:layout_marginTop="0dip"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:paddingEnd="5dp"
            android:paddingStart="5dp" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:background="#00000000"
                android:src="@drawable/r3_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/user_jizhang"
                android:textColor="#434343"
                android:textSize="20sp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:src="@drawable/right" />
        </LinearLayout>
        <!-- 相册 -->

        <LinearLayout
            android:id="@+id/user_xiangce"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="0.8dip"
            android:layout_marginTop="20dip"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:paddingEnd="5dp"
            android:paddingStart="5dp" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:background="#00000000"
                android:src="@drawable/v_xc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/user_xiangce"
                android:textColor="#434343"
                android:textSize="20sp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:src="@drawable/right" />
        </LinearLayout>
        <!-- 设置 -->

        <LinearLayout
            android:id="@+id/user_shezhi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="0.8dip"
            android:layout_marginTop="20dip"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:paddingEnd="5dp"
            android:paddingStart="5dp" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:background="#00000000"
                android:src="@drawable/v_sz" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/user_shezhi"
                android:textColor="#434343"
                android:textSize="20sp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:src="@drawable/right" />
        </LinearLayout>
        <!-- 退出登录 -->

        <LinearLayout
            android:id="@+id/user_tuichu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="0.8dip"
            android:layout_marginTop="30dip"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:paddingEnd="5dp"
            android:paddingStart="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/user_tuichu"
                android:textColor="#434343"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>