<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F3F6F8"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:src="#E4E3E3" />

            <EditText
                android:id="@+id/zb_content"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:background="#FFFFFF"
                android:gravity="top"
                android:hint="@string/zb_content"
                android:maxLength="200"
                android:padding="5dp"
                android:singleLine="false"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp" >

                <ImageView
                    android:id="@+id/addpicture1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="5dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/addpicture2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="5dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/addpicture3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="5dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/addpicture4"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/addpicture_style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/zb_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/zb_type"
                    android:textColor="#5B9FF1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/zb_typetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="@string/zb_typetext"
                    android:textColor="#5B9FF1"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="" />

                <TextView
                    android:id="@+id/paytype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:textColor="#5B9FF1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/moneycount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:textColor="#F1B35B"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:src="#E4E3E3" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>